[gd_scene load_steps=5 format=3 uid="uid://cpydtppvmkxsq"]

[ext_resource type="Script" path="res://LevelControl.gd" id="1_cer7y"]
[ext_resource type="FontFile" uid="uid://cu2tmhg1ywhjj" path="res://assets/fonts/Tinos-Bold.ttf" id="2_6364m"]
[ext_resource type="FontFile" uid="uid://c57uobgcv5avy" path="res://assets/fonts/Tinos-Regular.ttf" id="2_e5hpo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7otej"]

[node name="LevelControl" type="Control"]
process_mode = 2
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cer7y")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7otej")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="WinLoseLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6364m")
theme_override_font_sizes/font_size = 90
text = "YOU WIN"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e5hpo")
theme_override_font_sizes/font_size = 52
text = "Resume"

[node name="LevelSelectButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e5hpo")
theme_override_font_sizes/font_size = 52
text = "Level Select"

[node name="Restart" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e5hpo")
theme_override_font_sizes/font_size = 52
text = "Restart Level"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
